apps/minecraft-crossplay/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
