apps/minecraft-crossplay/k8s.np.default-deny.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minecraft-default-deny
  namespace: minecraft
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
